tests/snapshots/smoke_test__cycle@test-loader-test-loader.false.snap
---
source: tests/smoke_test.rs
expression: "test_policy(bundle, data).await"
---
- result:
    allow: false

