tests/snapshots/smoke_test__cycle@test-loader-test-loader.true.snap
---
source: tests/smoke_test.rs
expression: "test_policy(bundle, data).await"
---
- result:
    allow: true

