tests/snapshots/smoke_test__extras.snap
---
source: tests/smoke_test.rs
expression: "test_policy(\"test-extras\", None).await.expect(\"error in test suite\")"
---
- result:
    is_valid: true

