tests/snapshots/smoke_test__loader_empty.snap
---
source: tests/smoke_test.rs
expression: "test_policy(\"test-loader\", None).await.expect(\"error in test suite\")"
---
- result:
    allow: false

