tests/snapshots/smoke_test__loader_false.snap
---
source: tests/smoke_test.rs
expression: "test_policy(\"test-loader\",\n            Some(\"test-loader.false\")).await.expect(\"error in test suite\")"
---
- result:
    allow: false

