tests/snapshots/smoke_test__loader_true.snap
---
source: tests/smoke_test.rs
expression: "test_policy(\"test-loader\",\n            Some(\"test-loader.true\")).await.expect(\"error in test suite\")"
---
- result:
    allow: true

