tests/snapshots/smoke_test__time.snap
---
source: tests/smoke_test.rs
expression: "test_policy(\"test-time\", None).await.expect(\"error in test suite\")"
---
- result:
    add_date: 1694297259131330000
    clock:
      - 22
      - 7
      - 39
    clock_tz:
      - 0
      - 7
      - 39
    date:
      - 2022
      - 8
      - 8
    date_by_tz:
      - 2022
      - 8
      - 9
    now_ns: 1594731202000000000
    parse_duration_ns_h: 3600000000000
    parse_duration_ns_m: 60000000000
    parse_duration_ns_ms: 1000000
    parse_duration_ns_s: 1000000000
    parse_duration_ns_us: 1000
    parse_duration_ns_us1: 1
    parse_duration_ns_us2: 1000
    parse_rfc3339_ns: 1659270160727411000
    weekday: Monday
    weekday2: Tuesday
